testing popups for video
base popup

--- a/views/landing.html
+++ b/views/landing.html
@@ -37,6 +37,11 @@
 
 <body>
 	<div class="main">
+		<div id="popup" class="popup">
+        	<span class="button b-close"><span>X</span></span>
+        	If you can't get it up use<br><span class="logo">bPopup</span>
+    	</div>
+
 		<div class="how_it_works">
 			<img class="sharing center" src="/res/img/sharing.jpeg">
 	        <div class="help_close">
