--- a/public/css/addvideo.css
+++ b/public/css/addvideo.css
@@ -35,6 +35,7 @@ pre {
 	word-wrap:break-word;       /* Internet Explorer 5.5+ */
 }
 
+
 #header {
 	background: #90a090;
 	border-bottom: double 3px #aba;
@@ -128,6 +129,10 @@ img.center {
 	z-index: 9999; 
 	opacity: 1; 
 	display: block;
+}
+
+.b-modal __b-popup1__ {
+	opacity: 0;
 }
 /* sign in bootstrap */
 	  .head-msg{
