added video popup first mockup
added video popup

--- a/views/testpage.html
+++ b/views/testpage.html
@@ -8,8 +8,12 @@
     <meta name="author" content="Yaroslav Korzh" />
     <meta name="viewport" content="width=device-width">
 
+    <link rel="stylesheet" href="css/landing.css">
+
     <!-- <script type="text/javascript" src="lib/js/jquery-1.11.3.min.js"></script> -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+
+    <script type="text/javascript" src="js/test.js"></script> 
 </head>
   <body>
     <!-- 1. The <iframe> (and video player) will replace this <div> tag. -->
